# fabric-library-with-custom-cpp-example

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  UnicornView.m  package.json  patch.diff  react-native-unicorn.podspec  react-native.config.js  tsconfig.json
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativeunicorn/: UnicornView.java  UnicornViewManager.java  UnicornViewManagerImpl.java  UnicornViewPackage.java
cpp/: CMakeLists.txt  unicorn.cpp  unicorn.h
cpp/react/renderer/components/unicorn/: EventEmitters.h  Props.h  ShadowNodes.cpp  ShadowNodes.h
cpp/unicorn/: ComponentDescriptors.h  Props.cpp  Props.h  RCTComponentViewHelpers.h  ShadowNodes.h  UnicornViewState.cpp  UnicornViewState.h
example/: package.json  react-native.config.js
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/ios/: File.swift  Podfile
example/ios/UnicornExample/: LaunchScreen.storyboard
example/ios/UnicornExample.xcodeproj/: project.pbxproj
example/ios/UnicornExample.xcodeproj/xcshareddata/xcschemes/: UnicornExample.xcscheme
example/ios/UnicornExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx  ImageItem.tsx  LongText.tsx  StatefulImage.tsx  StatefulItem.tsx  getRandomColor.ts  styles.ts
ios/: UnicornView.h  UnicornView.mm  UnicornViewManager.mm
ios/Unicorn.xcodeproj/: project.pbxproj
src/: UnicornViewNativeComponent.ts  index.tsx
(+12 files in other folders)
